<resources>
    <string name="app_name">Mappe1_s364756</string>
    <string name="startGame">START SPILL</string>
    <string name="about">OM SPILLET</string>
    <string name="preference">INSTILLINGER</string>


    <!--Tekst til StartGame-siden -->
    <string name="title_startGame">Matteoppgaver</string>
    <string-array name="array_oppgaver">
        <item>12 + 10 </item>
        <item>2 + 1 </item>
        <item>1 + 0 </item>
        <item>28 + 2 </item>
        <item>1 + 2 </item>
        <item>5 + 9 </item>
        <item>4 + 10 </item>
        <item>12 + 2 </item>
        <item>2 + 22 </item>
        <item>4 + 3 </item>
        <item>0 + 0 </item>
        <item>1 + 1 </item>
        <item>10 + 10 </item>
        <item>20 + 10 </item>
        <item>11 + 2 </item>
    </string-array>

    <string name="equals"> = </string>
    <string-array name="array_oppgaver_svar">
        <item>22</item>
        <item>3</item>
        <item>1</item>
        <item>30</item>
        <item>3</item>
        <item>14</item>
        <item>14</item>
        <item>14</item>
        <item>24</item>
        <item>7</item>
        <item>0</item>
        <item>2</item>
        <item>20</item>
        <item>30</item>
        <item>14</item>
    </string-array>


    <string name="btn_tall0">0</string>
    <string name="btn_tall1">1</string>
    <string name="btn_tall2">2</string>
    <string name="btn_tall3">3</string>
    <string name="btn_tall4">4</string>
    <string name="btn_tall5">5</string>
    <string name="btn_tall6">6</string>
    <string name="btn_tall7">7</string>
    <string name="btn_tall8">8</string>
    <string name="btn_tall9">9</string>
    <string name="btn_svar">Svar</string>

    <string name="wrongAnswer">"Feil svar. Riktig svar er: "</string>

    <string name="rightAnswer">Riktig svar</string>
    <drawable name="ikonRight"></drawable>
    <!--Tekst til Dialogboks -->
    <string name="tittel">Du er i ferd med å avslutte spillet. Er du sikker på at du vil avbryte?</string>
    <string name="ok">JA</string>
    <string name="ikkeok">NEI</string>




    <!--Tekst til About-siden -->
    <string name="title_about">OM SPILLET</string>
    <string name="info">
        Lær å addere! For å spille må du skrive inn et svar til et regnestykke.
        Når du tror du har skrevet riktig svar, trykker du på knappen "start".
        Du vil få en tilbakemelding om svaret er riktig eller feil, og evt fasiten.
        En standard runde vil bestå av 5 spårsmål, men dette kan justeres under instillinger.
        Her kan man velge om en runde skal bestå av 5, 10 eller 15 spørsmål</string>


    <!--Tekst til Preferences-siden -->
    <string name="titlePreferences">Instillinger</string>
    <string name="title_preferencesQuestions">Velg antall spørsmål:</string>
    <string name="btn_5questions">5</string>
    <string name="btn_10questions">10</string>
    <string name="btn_15questions">15</string>
    <string name="title_preferencesLanguage">Velg språk</string>
    <string name="btn_norwegian">Norsk</string>
    <string name="btn_german">Tysk</string>

</resources>