<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:context=".Preferences">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlePreferences"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_preferencesQuestions"
        />

    <Button
        android:id="@+id/btn_5questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_5questions"
        />

    <Button
        android:id="@+id/btn_10questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_10questions"/>


    <Button
        android:id="@+id/btn_15questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_15questions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_preferencesLanguage"
        />

    <Button
        android:id="@+id/btn_norwegian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_norwegian"/>

    <Button
        android:id="@+id/btn_german"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_german"/>

</LinearLayout>