<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:context=".StartGame">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="350px"
        android:text="@string/title_startGame"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/array_oppgaver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="350px"
        android:textSize="16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/array_oppgaver_svar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedback"/>

    <TextView
        android:id="@+id/inputNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="350px"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/points"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:paddingLeft="200px"
        android:rowCount="4">


        <Button
            android:id="@+id/btn_tall1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall1"
            android:backgroundTint="@color/green"/>


        <Button
            android:id="@+id/btn_tall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall2" />

        <Button
            android:id="@+id/btn_tall3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall3" />

        <Button
            android:id="@+id/btn_tall4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall4" />

        <Button
            android:id="@+id/btn_tall5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall5" />

        <Button
            android:id="@+id/btn_tall6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall6" />

        <Button
            android:id="@+id/btn_tall7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall7" />

        <Button
            android:id="@+id/btn_tall8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall8" />

        <Button
            android:id="@+id/btn_tall9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall9" />

        <Button
            android:id="@+id/btn_tall0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tall0"
            android:backgroundTint="@color/green"
            />

        <Button
            android:id="@+id/btn_svar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_svar" />
    </GridLayout>

    <EditText
        android:id="@+id/tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





</LinearLayout>