<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:src="@drawable/ikonmatte"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <Button
        android:id="@+id/buttonStartGame"
        android:text="@string/startGame"
        android:layout_width="350dp"
        android:layout_height="111dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:textSize="32dp"
        />

    <Button
        android:id="@+id/buttonAbout"
        android:text="@string/about"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:backgroundTint="@color/green"
        android:layout_margin="10dp"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/buttonPreference"
        android:text="@string/preference"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="18dp"
        />

</LinearLayout>